feat: comprehensive test infrastructure and CI/CD integration
🧪 Session 8: Complete test infrastructure overhaul

## Jest TypeScript Configuration
- Created jest.config.ts with Next.js 14 compatibility
- Added jest.polyfills.js for Node.js environment support
- Configured ts-jest transformer and module resolution
- Set up coverage collection with proper exclusions

## Prisma Mocking Infrastructure
- Created tests/utils/prismaMock.ts with typed mocking
- Implemented singleton pattern in src/lib/prisma.ts
- Added comprehensive model coverage (Card, StatusEvent, Host, etc.)
- Ensured test isolation and proper cleanup

## Environment Variable Testing
- Created src/lib/__tests__/env.test.ts
- Tests for required variables and default values
- Validation of complex parsing logic (CSV, regex)
- Proper error handling and exception testing

## Finite State Machine Testing
- Enhanced src/lib/control/__tests__/fsm.test.ts
- Comprehensive state transition validation
- Invalid transition testing with proper error handling
- Idempotent operation testing

## API Route Testing Suite
- Queue endpoint: src/app/api/control/queue/__tests__/route.test.ts
- Report endpoint: src/app/api/control/report/__tests__/route.test.ts
- Token management: src/app/api/hosts/[id]/token/__tests__/route.test.ts
- Public status: src/app/api/public/status/summary/__tests__/route.test.ts
- Admin appearance: src/app/api/admin/appearance/__tests__/route.test.ts
- Public appearance: src/app/api/public/appearance/__tests__/route.test.ts

## Network Probe Testing
- Created src/lib/status/__tests__/probe.test.ts
- HTTP status code handling (2xx, 3xx, 4xx, 5xx)
- Timeout and AbortController testing
- Network error simulation and latency testing

## Test Script Configuration
- Updated package.json with proper test scripts
- Enhanced CI workflow integration
- Coverage reporting configuration
- Quality gates for deployment pipeline

## Key Features
✅ Full TypeScript support with ts-jest
✅ Comprehensive Prisma model m

--- a/package.json
+++ b/package.json
@@ -14,8 +14,7 @@
     "typecheck": "tsc -p tsconfig.json --noEmit",
     "test": "jest",
     "test:watch": "jest --watch",
-    "test:coverage": "jest --coverage",
-    "test:ci": "jest --ci --coverage --watchAll=false",
+    "test:cov": "jest --coverage --collectCoverageFrom=\"src/**/*.ts\" --collectCoverageFrom=\"!src/**/*.d.ts\" --collectCoverageFrom=\"!src/**/__tests__/**\"",
     "docs:check": "node scripts/check-links.js",
     "reset:clean": "rm -rf node_modules prisma/dev.db && npm ci && npx prisma generate && npx prisma migrate deploy",
     "prisma:generate": "dotenv -e .env.local -- prisma generate",
@@ -53,6 +52,8 @@
     "zod": "^3.22.0"
   },
   "devDependencies": {
+    "@babel/core": "^7.23.0",
+    "@babel/preset-env": "^7.23.0",
     "@testing-library/jest-dom": "^6.8.0",
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^14.6.1",
@@ -61,6 +62,7 @@
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
     "autoprefixer": "^10.4.0",
+    "babel-jest": "^29.7.0",
     "dotenv-cli": "^10.0.0",
     "eslint": "^8.0.0",
     "eslint-config-next": "^14.0.0",
@@ -73,6 +75,8 @@
     "prettier": "^3.6.2",
     "tailwindcss": "^3.3.0",
     "tailwindcss-animate": "^1.0.7",
+    "ts-jest": "^29.1.0",
+    "ts-node": "^10.9.0",
     "tsx": "^4.20.5",
     "typescript": "^5.0.0"
   },
